--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AgendamentoActivity" />
+        <activity android:name=".ConfirmacaoActivity" />
     </application>
 
 </manifest>
